<resources>
    <string name="app_name">Questery</string>

    <!-- nav menu strings -->
    <string name="stats_tab">Stats</string>
    <string name="quests_title">Quests</string>
    <string name="daily_missions_tab">Today\'s Missions</string>
    <string name="main_quests_tab">Active Main Quests</string>
    <string name="side_quests_tab">Active Side Quests</string>
    <string name="boss_fights_tab">Available Boss Fights</string>

    <!-- text labels -->
    <string name="missions_label">missions</string>
    <string name="boss_label">boss fight</string>

    <!-- text hints -->
    <string name="quest_title_hint">Title</string>
    <string name="quest_description_hint">Description</string>
    <string name="mission_title_hint">Title</string>
    <string name="mission_description_hint">Description</string>
    <string name="boss_title_hint">Boss Name</string>
    <string name="boss_description_hint">Boss Description</string>

    <!-- button texts -->
    <string name="add_mission">Add Mission</string>
    <string name="delete_quest">Delete Quest</string>
    <string name="confirm_quest">Confirm Quest</string>
    <string name="delete_mission">Delete Mission</string>
    <string name="confirm_mission">Confirm Mission</string>
    <string name="create_avatar">Create Avatar</string>

    <!-- abbreviated days of week -->
    <string name="abbreviated_sunday">SUN</string>
    <string name="abbreviated_monday">MON</string>
    <string name="abbreviated_tuesday">TUE</string>
    <string name="abbreviated_wednesday">WED</string>
    <string name="abbreviated_thursday">THU</string>
    <string name="abbreviated_friday">FRI</string>
    <string name="abbreviated_saturday">SAT</string>

    <!-- mission repeat hints and constants -->
    <string name="start_date_hint">mission start date</string>
    <string name="end_date_hint">mission end date</string>
    <string name="rep_times_hint">how many times to repeat</string>
    <string name="default_rep_times">66</string>

    <!-- menu strings-->
    <string name="create_quest_from_string">import quest from string</string>

    <!-- import dialog strings -->
    <string name="import_button">import</string>
    <string name="import_string_hint">Enter quest import string</string>

    <!-- avatar creation hints -->
    <string name="name_hint">Avatar\'s name</string>

</resources>
