<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.r3dtech.life.android.SideQuestEditActivity">

    <EditText
        android:id="@+id/title"
        android:textAppearance="@style/Text_Quest_Title_Style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/difficulty_spinner"
        android:hint="@string/quest_title_hint"
        android:textColor="@null"/>

    <EditText
        android:id="@+id/description"
        android:textAppearance="@style/Text_Description_Style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/title"
        android:layout_toStartOf="@+id/button"
        android:hint="@string/quest_description_hint"
        android:textColor="@null"/>

    <Spinner
        android:id="@+id/difficulty_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true" />
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/description"
        android:layout_alignParentEnd="true"
        android:text="@string/add_mission"
        android:onClick="addMissionCallback"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description"
        android:layout_above="@+id/create_quest_button"
        android:orientation="vertical">
        <ViewStub
            android:id="@+id/extra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>

        <TextView
            android:id="@+id/missions_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textAppearance="@style/Text_Label_Style"
            android:text="@string/missions_label"
            android:labelFor="@+id/recycler_view"/>

        <ListView
            android:id="@+id/list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <Button
        android:id="@+id/create_quest_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/confirm"
        android:onClick="createQuestCallback"/>
</RelativeLayout>
